--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -246,6 +246,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17171302">Farmee alpha released – a vertical farm control system for raspberry pi</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://medium.com/farmee/farmee-closed-alpha-v0-2-released-c207ed981f0c">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=steffenabel">steffenabel</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 08:37:50 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    5.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169335">Venezuelan immigrants turn to ride-hailing services across Latin America</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -354,26 +374,6 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=SQL2219">SQL2219</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 11:23:15 &nbsp;•&nbsp;
                                     3 comments &nbsp;•&nbsp;
-                                    5.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166095">Facebook accused of conducting mass surveillance through its apps</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.theguardian.com/technology/2018/may/24/facebook-accused-of-conducting-mass-surveillance-through-its-apps">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 08:44:18 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
                                     5.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 08:40:03.679773</strong>
+            <strong>Last update at 2018-05-28 08:50:04.094668</strong>
         </div>
     </div>
 </div>
