--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -466,14 +466,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17121145">Mental Models: The Best Way to Make Intelligent Decisions (113 Models Explained)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17164737">How to write efficient matrix multiplication</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.fs.blog/mental-models/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=cpeterso">cpeterso</a></strong> &nbsp;•&nbsp;
-                                    2018-05-21 19:37:01 &nbsp;•&nbsp;
-                                    36 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://gist.github.com/nadavrot/5b35d44e8ba3dd718e595e40184d03f0">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Mtz1974">Mtz1974</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 23:29:46 &nbsp;•&nbsp;
+                                    85 comments &nbsp;•&nbsp;
                                     339.0 points
                                 </span>
                             </td>
@@ -486,15 +486,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17164737">How to write efficient matrix multiplication</a>
+                                    <a href="https://news.ycombinator.com/item?id=17121145">Mental Models: The Best Way to Make Intelligent Decisions (113 Models Explained)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://gist.github.com/nadavrot/5b35d44e8ba3dd718e595e40184d03f0">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Mtz1974">Mtz1974</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 23:29:46 &nbsp;•&nbsp;
-                                    85 comments &nbsp;•&nbsp;
-                                    337.0 points
+                                    <a class="node" href="https://www.fs.blog/mental-models/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=cpeterso">cpeterso</a></strong> &nbsp;•&nbsp;
+                                    2018-05-21 19:37:01 &nbsp;•&nbsp;
+                                    36 comments &nbsp;•&nbsp;
+                                    339.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,14 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17118109">Predatory Behavior Runs Rampant in Facebook’s Addiction Support Groups</a>
+                                    <a href="https://news.ycombinator.com/item?id=17169331">Python’s For - Else</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.theverge.com/2018/5/21/17370066/facebook-addiction-support-groups-rehab-patient-brokering">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=DmenshunlAnlsis">DmenshunlAnlsis</a></strong> &nbsp;•&nbsp;
-                                    2018-05-21 13:13:21 &nbsp;•&nbsp;
-                                    171 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://book.pythontips.com/en/latest/for_-_else.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 22:01:52 &nbsp;•&nbsp;
+                                    172 comments &nbsp;•&nbsp;
                                     325.0 points
                                 </span>
                             </td>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17152496">Google and Facebook accused of breaking GDPR laws</a>
+                                    <a href="https://news.ycombinator.com/item?id=17118109">Predatory Behavior Runs Rampant in Facebook’s Addiction Support Groups</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.bbc.com/news/technology-44252327">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=nemoniac">nemoniac</a></strong> &nbsp;•&nbsp;
-                                    2018-05-25 11:27:50 &nbsp;•&nbsp;
-                                    368 comments &nbsp;•&nbsp;
-                                    324.0 points
+                                    <a class="node" href="https://www.theverge.com/2018/5/21/17370066/facebook-addiction-support-groups-rehab-patient-brokering">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=DmenshunlAnlsis">DmenshunlAnlsis</a></strong> &nbsp;•&nbsp;
+                                    2018-05-21 13:13:21 &nbsp;•&nbsp;
+                                    171 comments &nbsp;•&nbsp;
+                                    325.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 08:40:03.679773</strong>
+            <strong>Last update at 2018-05-28 08:50:04.094668</strong>
         </div>
     </div>
 </div>
