--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17169563">Rosewood massacre</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://en.wikipedia.org/wiki/Rosewood_massacre">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jonnybgood">jonnybgood</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 22:53:49 &nbsp;•&nbsp;
+                                    3 comments &nbsp;•&nbsp;
+                                    6.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17167950">RMS: My Lisp Experiences and the Development of GNU Emacs</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -193,26 +213,6 @@
                                     <a class="node" href="https://news.mit.edu/2018/materials-heated-magnetic-fields-thermoelectrics-0525">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=el_duderino">el_duderino</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 13:34:20 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    6.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166450">Plainbudget: Minimalist Plain Text Budgeting</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://galvez.github.io/plainbudget/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=jgalvez">jgalvez</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 11:20:48 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     6.0 points
                                 </span>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 09:10:03.129278</strong>
+            <strong>Last update at 2018-05-28 09:20:03.466682</strong>
         </div>
     </div>
 </div>
