--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169112">The 1975 HP 1607 Logic State Analyzer, one of the first logic analyzers [video]</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.youtube.com/watch?v=SiBozvGl5_I">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=kensai">kensai</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 21:06:56 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
-                                    17.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17168237">Ghostery Email Incident Update</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -295,6 +275,26 @@
                                     2018-05-27 21:52:06 &nbsp;•&nbsp;
                                     2 comments &nbsp;•&nbsp;
                                     9.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17171396">Intel accused of age discrimination – The Verge</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.theverge.com/2018/5/28/17401892/intel-age-discrimination-layoffs-investigation">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 09:03:10 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    8.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 09:50:04.628025</strong>
+            <strong>Last update at 2018-05-28 10:00:03.066545</strong>
         </div>
     </div>
 </div>
