--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -374,7 +374,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=hoaphumanoid">hoaphumanoid</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 21:00:55 &nbsp;•&nbsp;
                                     51 comments &nbsp;•&nbsp;
-                                    132.0 points
+                                    133.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17159653">The Old Robots</a>
+                                    <a href="https://news.ycombinator.com/item?id=17170733">An embedded database written in Rust</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.theoldrobots.com/index2.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=fragmede">fragmede</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 01:47:32 &nbsp;•&nbsp;
-                                    15 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://github.com/spacejam/sled">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=mountainview">mountainview</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 05:32:28 &nbsp;•&nbsp;
+                                    42 comments &nbsp;•&nbsp;
                                     113.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 10:40:03.610449</strong>
+            <strong>Last update at 2018-05-28 10:50:05.416741</strong>
         </div>
     </div>
 </div>
