--- a/jobs/index.html
+++ b/jobs/index.html
@@ -62,18 +62,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17152630">NimForum – A lightweight alternative to Discourse</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17165889">Improved Seam Carving Using Forward Energy</a>
                                 </span>
                             </td>
@@ -111,6 +99,18 @@
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17161122">A k-means clustering algorithm implementation written in Go</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17153282">Online destination for Product Enthusiasts</a>
                                 </span>
                             </td>
                         </tr>
@@ -577,7 +577,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 11:40:03.645265</strong>
+            <strong>Last update at 2018-05-28 11:50:03.761019</strong>
         </div>
     </div>
 </div>
