--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -62,18 +62,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17152630">NimForum – A lightweight alternative to Discourse</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17165889">Improved Seam Carving Using Forward Energy</a>
                                 </span>
                             </td>
@@ -111,6 +99,18 @@
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17161122">A k-means clustering algorithm implementation written in Go</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17153282">Online destination for Product Enthusiasts</a>
                                 </span>
                             </td>
                         </tr>
@@ -254,7 +254,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=hoaphumanoid">hoaphumanoid</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 21:00:55 &nbsp;•&nbsp;
                                     52 comments &nbsp;•&nbsp;
-                                    138.0 points
+                                    139.0 points
                                 </span>
                             </td>
                         </tr>
@@ -373,8 +373,8 @@
                                     <a class="node" href="https://github.com/spacejam/sled">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=mountainview">mountainview</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 05:32:28 &nbsp;•&nbsp;
-                                    49 comments &nbsp;•&nbsp;
-                                    128.0 points
+                                    50 comments &nbsp;•&nbsp;
+                                    129.0 points
                                 </span>
                             </td>
                         </tr>
@@ -394,7 +394,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=tosh">tosh</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 14:09:42 &nbsp;•&nbsp;
                                     37 comments &nbsp;•&nbsp;
-                                    127.0 points
+                                    128.0 points
                                 </span>
                             </td>
                         </tr>
@@ -454,7 +454,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=DanBC">DanBC</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 12:17:18 &nbsp;•&nbsp;
                                     105 comments &nbsp;•&nbsp;
-                                    115.0 points
+                                    117.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 11:40:03.645265</strong>
+            <strong>Last update at 2018-05-28 11:50:03.761019</strong>
         </div>
     </div>
 </div>
