--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17168210">Why You Can't Just Block EU Visitors, EU Customers, or Any EU Traffic Under GDPR</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://www.gettingemaildelivered.com/why-you-cant-just-block-eu-visitors-eu-customers-or-any-eu-traffic-under-gdpr">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=zerostar07">zerostar07</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 18:10:10 &nbsp;•&nbsp;
-                                    117 comments &nbsp;•&nbsp;
-                                    54.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17171396">Intel accused of age discrimination</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -193,8 +173,8 @@
                                     <a class="node" href="https://www.theverge.com/2018/5/28/17401892/intel-age-discrimination-layoffs-investigation">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 09:03:10 &nbsp;•&nbsp;
-                                    23 comments &nbsp;•&nbsp;
-                                    44.0 points
+                                    25 comments &nbsp;•&nbsp;
+                                    45.0 points
                                 </span>
                             </td>
                         </tr>
@@ -433,7 +413,7 @@
                                     <a class="node" href="https://www.youtube.com/watch?v=SiBozvGl5_I">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=kensai">kensai</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 21:06:56 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
+                                    2 comments &nbsp;•&nbsp;
                                     21.0 points
                                 </span>
                             </td>
@@ -546,6 +526,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17170764">In 2018, Windows died at home and nobody cared</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.zdnet.com/article/in-2018-windows-died-at-home-and-nobody-cared/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Tuldok">Tuldok</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 05:43:36 &nbsp;•&nbsp;
+                                    7 comments &nbsp;•&nbsp;
+                                    12.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169010">Pewdiepie Is Teaching His Audience That Women Are Asking for It</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-28 12:10:03.881406</strong>
+            <strong>Last update at 2018-05-28 12:20:03.137135</strong>
         </div>
     </div>
 </div>
